--- a/HOME-MTHRFCKR/DAILY NOTES/2022-11-12.md
+++ b/HOME-MTHRFCKR/DAILY NOTES/2022-11-12.md
@@ -24,7 +24,7 @@
 - [design](design)
 - [DEV](DEV)
 - [devtools](devtools)
-- [discord](discord)
+- [discord](HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/piracysubreddit/r-piracy/docs/sources/discord.md)
 - [DOWNLOAD](DOWNLOAD)
 - [downloadpiracyguide](downloadpiracyguide)
 - [downloads](downloads)
