--- a/HOME-MTHRFCKR/DAILY NOTES/2022-11-12.md
+++ b/HOME-MTHRFCKR/DAILY NOTES/2022-11-12.md
@@ -1,108 +1,102 @@
-- [2022-05-20](2022-05-20)
-- [ad-blocking](ad-blocking)
-- [adblockvpnguide](adblockvpnguide)
-- [androidpiracyguide](androidpiracyguide)
-- [AUDIO](AUDIO)
-- [audiopiracyguide](audiopiracyguide)
-- [Awesome Actions](Awesome Actions)
-- [Awesome Github Actions](Awesome Github Actions)
-- [AwesomeP](AwesomeP)
-- [BEGINNERS](BEGINNERS)
-- [beginners-guide-to-piracy](beginners-guide-to-piracy)
-- [BOOKMRKS-MTHRFCKR](BOOKMRKS-MTHRFCKR)
-- [BROWSER-NETWORK](BROWSER-NETWORK)
-- [cartoons-and-anime](cartoons-and-anime)
-- [Cata-List Storage](Cata-List Storage)
-- [CHAMPAGNE-GUIDES](CHAMPAGNE-GUIDES)
-- [CHAMPAGNE-PIRACY-WIKI](CHAMPAGNE-PIRACY-WIKI)
-- [Chat](Chat)
-- [comics-and-manga](comics-and-manga)
-- [communities](communities)
-- [COMPUTERS](COMPUTERS)
-- [content-blogs-rss-and-feeds](content-blogs-rss-and-feeds)
-- [dead](dead)
-- [design](design)
-- [DEV](DEV)
-- [devtools](devtools)
-- [discord](discord)
-- [DOWNLOAD](DOWNLOAD)
-- [downloadpiracyguide](downloadpiracyguide)
-- [downloads](downloads)
-- [dump](dump)
-- [Edge on left](Edge on left)
-- [edu](edu)
-- [EDU](EDU)
-- [edupiracyguide](edupiracyguide)
-- [Embeds](Embeds)
-- [FIND SITES](FIND SITES)
-- [FMHY](FMHY)
-- [FMHY Discord Template](FMHY Discord Template)
-- [FREEMEDIAHECKYEAH](FREEMEDIAHECKYEAH)
-- [game-tools](game-tools)
-- [Gaming](Gaming)
-- [general](general)
-- [git](git)
-- [Github Badges](Github Badges)
-- [Github Badges II](Github Badges II)
-- [Github Stars](Github Stars)
-- [GRAPHICS-DESIGN](GRAPHICS-DESIGN)
-- [Headers](Headers)
-- [Helpful Tech Resources](Helpful Tech Resources)
-- [How To Proxy 'any' Website Using Cloudflare Workers](How To Proxy 'any' Website Using Cloudflare Workers)
-- [img-tools](img-tools)
-- [issue-tracking-and-project-management](issue-tracking-and-project-management)
-- [leaked-tools-2021](leaked-tools-2021)
-- [linuxguide](linuxguide)
-- [Lists - (un)ordered](Lists - (un)ordered)
-- [llzektorll-Project-0](llzektorll-Project-0)
-- [media-centre-applications](media-centre-applications)
-- [Misc](Misc)
-- [Misc](Misc)
-- [MISC](MISC)
-- [MISC GUIDE](MISC GUIDE)
-- [miscellaneous](miscellaneous)
-- [mobile](mobile)
-- [MOBILE](MOBILE)
-- [monitoring](monitoring)
-- [More Custom Search Engines](More Custom Search Engines)
-- [more-custom-search-engines](more-custom-search-engines)
-- [movies-and-tv-shows](movies-and-tv-shows)
-- [music](music)
-- [music-and-podcasts](music-and-podcasts)
-- [Note title in pane](Note title in pane)
-- [Online Streaming](Online Streaming)
-- [osint](osint)
-- [osint-search-engines](osint-search-engines)
-- [Parrot Management Dataview](Parrot Management Dataview)
-- [privacy](privacy)
-- [READ](READ)
-- [readingpiracyguide](readingpiracyguide)
-- [reference-tools](reference-tools)
-- [RentryCommands](RentryCommands)
-- [Safe DDL Site List](Safe DDL Site List)
-- [Safe DDL Site List](Safe DDL Site List)
-- [Safe Repackers List](Safe Repackers List)
-- [Safe Repackers List](Safe Repackers List)
-- [serverinformation](serverinformation)
-- [SITEHUNT](SITEHUNT)
-- [software](software)
-- [Special effects](Special effects)
-- [storage](storage)
-- [STORAGE](STORAGE)
-- [Streaming Sites](Streaming Sites)
-- [Take Your Github Repository To The Next Level](Take Your Github Repository To The Next Level)
-- [telegram](telegram)
-- [TODO](TODO)
-- [TOOLS](TOOLS)
-- [TOOLS GUIDE](TOOLS GUIDE)
-- [tools-box](tools-box)
-- [tools-for-teams-and-collaboration](tools-for-teams-and-collaboration)
-- [torrentpiracyguide](torrentpiracyguide)
-- [Unsafe Site List](Unsafe Site List)
-- [Unsafe Site List](Unsafe Site List)
-- [useful-stuff](useful-stuff)
-- [userscripts](userscripts)
-- [VIDEO](VIDEO)
-- [videopiracyguide](videopiracyguide)
-- [webdev](webdev)
-- [win activation](win activation)
+# 2022-11-12
+
+---
+
+# Search ― Raindrop.io Help
+Raindrop can search by bookmark details, URL, tag, type, date or entire content of web-page or PDF (no OCR).  
+Best in class support for 16 languages. Find precisely by crafting advanced searches with our super power operators.
+
+![](https://help.raindrop.io/assets/images/intro-fdf5f76363fc239e345b7d679b6bdeff.png)
+
+Raindrop will remember your ten most recent searches so you can easily return to the list of results. Plus, these recent searches will sync across your apps so you can continue a search on another device or computer.
+
+Full-Text Search​
+---------------------------------------------------------------
+
+Raindrop can search through the entire content of every bookmark and PDF (no OCR) you’ve saved, making it extremely easy to find what you’re looking for. It's like your personal Google!
+
+Your bookmarks are indexed automatically, no need to do anything. Usually only meaningful content of web-page is indexed. Ads, navigation, comments and so on are stripped if possible.
+
+### How to use?​
+
+### Turn off​
+
+To find precisely you can craft advanced searches using Boolean operators.
+
+![](https://help.raindrop.io/assets/images/operators-b8332f2848d49a329059310ba95791fd.png)
+
+Listed below are the search operators we support, with quick examples showing how they may be used.  
+No need to remember everything listed below, our smart search suggestions will show them for you.
+
+Mix-and-match to find exactly what you're looking for.
+
+
+
+* Operator: apple iphone
+  * Example: apple iphone
+  * Explanation: Find items that contains such words in title, description, domain or in web page content
+* Operator: "sample"
+  * Example: "superman vs. batman"
+  * Explanation: Find items that contains exact phrase in title, description, domain or in web page content
+* Operator: -sample
+  * Example: -superman  -#coffee
+  * Explanation: Requires that the search results do not include this word or condition
+* Operator: #tag
+  * Example: #coffee
+  * Explanation: Find items that have a certain tag
+* Operator: #"one tag"
+  * Example: #"coffee beans"
+  * Explanation: Find items that have a certain multi-word tag
+* Operator: match:OR
+  * Example: superman batman match:OR
+  * Explanation: Find items with either search term
+* Operator: created:YYYY-MM-DD  created:YYYY-MM  created:YYYY
+  * Example: created:2021-07-15  created:2021-07  created:2021  created:>2021-07-15  created:<2021-07-15
+  * Explanation: Search for items created in specific date.  Put < or > in front of a date to find before or after specific date respectively
+* Operator: lastUpdate:YYYY-MM-DD
+  * Example: lastUpdate:2021-07-15
+  * Explanation: Search for items updated in specific date
+* Operator: link:sample
+  * Example: link:drop  link:"crunch base"
+  * Explanation: Find items with a certain word (or words) in the URL
+* Operator: ❤️
+  * Example: ❤️
+  * Explanation: Find all favorites
+* Operator: type:sample
+  * Example: type:link  type:article  type:image  type:video  type:document  type:audio
+  * Explanation: Find by type
+* Operator: file:true
+  * Example: file:true
+  * Explanation: Find files
+* Operator: notag:true
+  * Example: notag:true
+  * Explanation: Find items without tags
+* Operator: cache.status:sample
+  * Example: cache.status:ready  -cache.status:ready
+  * Explanation: Find items that have (or not) a permanent copy
+
+
+Raindrop.io can periodically check all your bookmarks for availability. If any URL hit dead you will notice a special 'ghost' icon next to bookmark domain name.
+
+![](https://help.raindrop.io/assets/images/brokens-6f70b867e515b8bf9dd7039d0bf77e34.png)
+
+### Find all broken links​
+
+### Remove broken links​
+
+### Troubleshooting​
+
+Have you ever bookmarked a page more than once?
+
+Duplicate bookmarks take up space and needlessly add to a surplus of saved pages. Raindrop.io can help you locate and remove duplicates bookmarks.
+
+### Find all duplicates​
+
+### Remove duplicates​
+
+### How it works internally?​
+
+*   Full-text search
+    *   Indexing is happen with slight delay, usually few minutes
+    *   We can index up to 300,000 characters in one document/page
+    *   Bookmark should have a permanent copy to support full-text search
