--- a/HOME-MTHRFCKR/DAILY NOTES/2022-11-12.md
+++ b/HOME-MTHRFCKR/DAILY NOTES/2022-11-12.md
@@ -3,6 +3,7 @@
 ---
 
 # Search ― Raindrop.io Help
+
 Raindrop can search by bookmark details, URL, tag, type, date or entire content of web-page or PDF (no OCR).  
 Best in class support for 16 languages. Find precisely by crafting advanced searches with our super power operators.
 
@@ -17,9 +18,9 @@ Raindrop can search through the entire content of every bookmark and PDF (no OCR
 
 Your bookmarks are indexed automatically, no need to do anything. Usually only meaningful content of web-page is indexed. Ads, navigation, comments and so on are stripped if possible.
 
-### How to use?​
+## How to use?​
 
-### Turn off​
+## Turn off​
 
 To find precisely you can craft advanced searches using Boolean operators.
 
@@ -30,8 +31,6 @@ No need to remember everything listed below, our smart search suggestions will s
 
 Mix-and-match to find exactly what you're looking for.
 
-
-
 * Operator: apple iphone
   * Example: apple iphone
   * Explanation: Find items that contains such words in title, description, domain or in web page content
@@ -39,7 +38,7 @@ Mix-and-match to find exactly what you're looking for.
   * Example: "superman vs. batman"
   * Explanation: Find items that contains exact phrase in title, description, domain or in web page content
 * Operator: -sample
-  * Example: -superman  -#coffee
+  * Example: -superman -#coffee
   * Explanation: Requires that the search results do not include this word or condition
 * Operator: #tag
   * Example: #coffee
@@ -50,20 +49,20 @@ Mix-and-match to find exactly what you're looking for.
 * Operator: match:OR
   * Example: superman batman match:OR
   * Explanation: Find items with either search term
-* Operator: created:YYYY-MM-DD  created:YYYY-MM  created:YYYY
-  * Example: created:2021-07-15  created:2021-07  created:2021  created:>2021-07-15  created:<2021-07-15
-  * Explanation: Search for items created in specific date.  Put < or > in front of a date to find before or after specific date respectively
+* Operator: created:YYYY-MM-DD created:YYYY-MM created:YYYY
+  * Example: created:2021-07-15 created:2021-07 created:2021 created:>2021-07-15 created:<2021-07-15
+  * Explanation: Search for items created in specific date. Put < or > in front of a date to find before or after specific date respectively
 * Operator: lastUpdate:YYYY-MM-DD
   * Example: lastUpdate:2021-07-15
   * Explanation: Search for items updated in specific date
 * Operator: link:sample
-  * Example: link:drop  link:"crunch base"
+  * Example: link:drop link:"crunch base"
   * Explanation: Find items with a certain word (or words) in the URL
 * Operator: ❤️
   * Example: ❤️
   * Explanation: Find all favorites
 * Operator: type:sample
-  * Example: type:link  type:article  type:image  type:video  type:document  type:audio
+  * Example: type:link type:article type:image type:video type:document type:audio
   * Explanation: Find by type
 * Operator: file:true
   * Example: file:true
@@ -72,31 +71,30 @@ Mix-and-match to find exactly what you're looking for.
   * Example: notag:true
   * Explanation: Find items without tags
 * Operator: cache.status:sample
-  * Example: cache.status:ready  -cache.status:ready
+  * Example: cache.status:ready -cache.status:ready
   * Explanation: Find items that have (or not) a permanent copy
-
 
 Raindrop.io can periodically check all your bookmarks for availability. If any URL hit dead you will notice a special 'ghost' icon next to bookmark domain name.
 
 ![](https://help.raindrop.io/assets/images/brokens-6f70b867e515b8bf9dd7039d0bf77e34.png)
 
-### Find all broken links​
+## Find All Broken links​
 
-### Remove broken links​
+## Remove Broken links​
 
-### Troubleshooting​
+## Troubleshooting​
 
 Have you ever bookmarked a page more than once?
 
 Duplicate bookmarks take up space and needlessly add to a surplus of saved pages. Raindrop.io can help you locate and remove duplicates bookmarks.
 
-### Find all duplicates​
+## Find All duplicates​
 
-### Remove duplicates​
+## Remove duplicates​
 
-### How it works internally?​
+## How it Works internally?​
 
-*   Full-text search
-    *   Indexing is happen with slight delay, usually few minutes
-    *   We can index up to 300,000 characters in one document/page
-    *   Bookmark should have a permanent copy to support full-text search
+* Full-text search
+    * Indexing is happen with slight delay, usually few minutes
+    * We can index up to 300,000 characters in one document/page
+    * Bookmark should have a permanent copy to support full-text search
