--- a/HOME-MTHRFCKR/DAILY NOTES/2022-11-14.md
+++ b/HOME-MTHRFCKR/DAILY NOTES/2022-11-14.md
@@ -1,46 +1,51 @@
+# 2022-11-14
+
+---
+
 EMAILS
 
 Gmail
 
-Aliveandwellband@gmail.com
-blackhatallycat@gmail.com
-b3thelightmi@gmail.com
-dontcallmedsmith@gmail.com
-dsmithrecordings@gmail.com
-hittheresetmi@gmail.com
-homeiswhereveruare@gmail.com
-iamdustinsmith@gmail.com
-ihitthereset@gmail.com
-joelclementine0311@gmail.com
-repaerehtmai@gmail.com
-rockanddrumroll@gmail.com
-Smsaffair@gmail.com
-strangersagainband@gmail.com
-tillweareburied@gmail.com
+Aliveandwellband@gmail.com  
+blackhatallycat@gmail.com  
+b3thelightmi@gmail.com  
+dontcallmedsmith@gmail.com  
+dsmithrecordings@gmail.com  
+hittheresetmi@gmail.com  
+homeiswhereveruare@gmail.com  
+iamdustinsmith@gmail.com  
+ihitthereset@gmail.com  
+joelclementine0311@gmail.com  
+repaerehtmai@gmail.com  
+rockanddrumroll@gmail.com  
+Smsaffair@gmail.com  
+strangersagainband@gmail.com  
+tillweareburied@gmail.com  
 whoisdsmith@gmail.com
 
-Outlook
-thefailureoftimeinvention@outlook.com
-Theycallmedsmith@outlook.com
+Outlook  
+thefailureoftimeinvention@outlook.com  
+Theycallmedsmith@outlook.com  
 whoisdsmith@outlook.com
 
-AOL
-Iamdustinsmith@aol.com
-persy123@aol.com
+AOL  
+Iamdustinsmith@aol.com  
+persy123@aol.com  
 Whatitiz2burn@aol.com
 
-MISC
+MISC  
 iam@hitthereset.org
 
-Yahoo
-dustinthemartyr@yahoo.com
-hittheresetmi@yahoo.com
-mulligami@yahoo.com
+Yahoo  
+dustinthemartyr@yahoo.com  
+hittheresetmi@yahoo.com  
+mulligami@yahoo.com  
 Sky_fading@yahoo.com
 
 Live
 Iamtfoti@live.com
 ---
+
 CELLPHONE NUMBERS
 
 2695793545
@@ -54,7 +59,9 @@ CELLPHONE NUMBERS
 5176301609
 5177673117
 5178796502
+
 ---
+
 OLD PASSWORDS
 
 #Biteme11
@@ -80,13 +87,17 @@ H1tth3r3s3t
 N3v3rm3ant
 Slutw1fe
 Y0uar3my5un5h1ne
+
 ---
+
 OLD SOCIAL
 
 dustinthemartyr@yahoo.com - Ipad8565
-Sky_fading@yahoo.com    biteme11
+Sky_fading@yahoo.com biteme11
 Dustinthemartyr@yahoo.com:iamthedramalife
+
 ---
+
 ADDRESSES
 
 15881 MCCLELLAN DRIVE Apt B30 - Marshall (2006)
@@ -99,16 +110,18 @@ Main St, Tekonsha, MI (2008)
 
 Elm St , Tekonsha, MI (2009)
 
-701  S  Superior St, Albion, MI 49224-2123 (2012)
+701 S  Superior St, Albion, MI 49224-2123 (2012)
 
 1052 S. Kalamazoo Ave. Marshall (2014)
 
 19011 I Dr N, Marshall, MI 49068-9458 (2014)
 
-8820  Verona Rd, Battle Creek, MI 49014-8454 (2015)
+8820 Verona Rd, Battle Creek, MI 49014-8454 (2015)
 
-816  S  Kalamazoo Ave, Marshall, MI 49068-1939 (2016)
+816 S  Kalamazoo Ave, Marshall, MI 49068-1939 (2016)
+
 ---
+
 USER-NAMES
 
 Aliveandwellband
@@ -125,11 +138,13 @@ Martyrinme85
 whatitiz2burn
 whoisdsmith
 wh0isdsmith
+
 ---
+
 CLOUDS
 
-BOX
-whoisdsmith@gmail.com
+BOX  
+whoisdsmith@gmail.com  
 biteme11
 
 MEGA
@@ -139,29 +154,33 @@ iam@hitthereset.org
 #N3v3rM3ant
 dustinthemartyr@yahoo.com
 N3v3rm3ant
+
 ---
+
 BANDS
 
-• Persy
-• Mulligan
-• Informal
-• 3 Feet Short of a Yard
-• As Our Hearts Race To Collide
-• Alive and Well
-• The Martyr In Me
-• The Drama Life
-• Honest and Ready
-• View From Ida
-• The Failure of Time Invention
-• Concordia
-• Everynight Fire Works
-• Anotherlife
-• Strangers Again
-• Hit The Reset
-• Be The Light
-• I Am The Reaper
-• Astronaudia
-• Lightbringer
-• D3VDB3VT
-• The Casket Diaries
+- Persy
+- Mulligan
+- Informal
+- 3 Feet Short of a Yard
+- As Our Hearts Race To Collide
+- Alive and Well
+- The Martyr In Me
+- The Drama Life
+- Honest and Ready
+- View From Ida
+- The Failure of Time Invention
+- Concordia
+- Everynight Fire Works
+- Anotherlife
+- Strangers Again
+- Hit The Reset
+- Be The Light
+- I Am The Reaper
+- Astronaudia
+- Lightbringer
+- D3VDB3VT
+- The Casket Diaries
 
+
+---
