--- a/HOME-MTHRFCKR/DAILY NOTES/2022-11-14.md
+++ b/HOME-MTHRFCKR/DAILY NOTES/2022-11-14.md
@@ -1,47 +1,51 @@
-EMAILS
+# 2022-11-14
+
+## EMAILS
 
 Gmail
 
-Aliveandwellband@gmail.com
-blackhatallycat@gmail.com
-b3thelightmi@gmail.com
-dontcallmedsmith@gmail.com
-dsmithrecordings@gmail.com
-hittheresetmi@gmail.com
-homeiswhereveruare@gmail.com
-iamdustinsmith@gmail.com
-ihitthereset@gmail.com
-joelclementine0311@gmail.com
-repaerehtmai@gmail.com
-rockanddrumroll@gmail.com
-Smsaffair@gmail.com
-strangersagainband@gmail.com
-tillweareburied@gmail.com
+Aliveandwellband@gmail.com  
+blackhatallycat@gmail.com  
+b3thelightmi@gmail.com  
+dontcallmedsmith@gmail.com  
+dsmithrecordings@gmail.com  
+hittheresetmi@gmail.com  
+homeiswhereveruare@gmail.com  
+iamdustinsmith@gmail.com  
+ihitthereset@gmail.com  
+joelclementine0311@gmail.com  
+repaerehtmai@gmail.com  
+rockanddrumroll@gmail.com  
+Smsaffair@gmail.com  
+strangersagainband@gmail.com  
+tillweareburied@gmail.com  
 whoisdsmith@gmail.com
 
-Outlook
-thefailureoftimeinvention@outlook.com
-Theycallmedsmith@outlook.com
+Outlook  
+thefailureoftimeinvention@outlook.com  
+Theycallmedsmith@outlook.com  
 whoisdsmith@outlook.com
 
-AOL
-Iamdustinsmith@aol.com
-persy123@aol.com
+AOL  
+Iamdustinsmith@aol.com  
+persy123@aol.com  
 Whatitiz2burn@aol.com
 
-MISC
+MISC  
 iam@hitthereset.org
 
-Yahoo
-dustinthemartyr@yahoo.com
-hittheresetmi@yahoo.com
-mulligami@yahoo.com
+Yahoo  
+dustinthemartyr@yahoo.com  
+hittheresetmi@yahoo.com  
+mulligami@yahoo.com  
 Sky_fading@yahoo.com
 
 Live
 Iamtfoti@live.com
+
 ---
-CELLPHONE NUMBERS
+
+## CELLPHONE NUMBERS
 
 2695793545
 2696776859
@@ -54,8 +58,10 @@ CELLPHONE NUMBERS
 5176301609
 5177673117
 5178796502
+
 ---
-OLD PASSWORDS
+
+## OLD PASSWORDS
 
 #Biteme11
 #Bl3ss3d
@@ -80,14 +86,18 @@ H1tth3r3s3t
 N3v3rm3ant
 Slutw1fe
 Y0uar3my5un5h1ne
+
 ---
-OLD SOCIAL
+
+## OLD SOCIAL
 
 dustinthemartyr@yahoo.com - Ipad8565
 Sky_fading@yahoo.com    biteme11
 Dustinthemartyr@yahoo.com:iamthedramalife
+
 ---
-ADDRESSES
+
+## ADDRESSES
 
 15881 MCCLELLAN DRIVE Apt B30 - Marshall (2006)
 
@@ -108,8 +118,10 @@ Elm St , Tekonsha, MI (2009)
 8820  Verona Rd, Battle Creek, MI 49014-8454 (2015)
 
 816  S  Kalamazoo Ave, Marshall, MI 49068-1939 (2016)
+
 ---
-USER-NAMES
+
+## USER-NAMES
 
 Aliveandwellband
 Blackheartbay
@@ -125,11 +137,13 @@ Martyrinme85
 whatitiz2burn
 whoisdsmith
 wh0isdsmith
----
-CLOUDS
 
-BOX
-whoisdsmith@gmail.com
+---
+
+## CLOUDS
+
+BOX  
+whoisdsmith@gmail.com  
 biteme11
 
 MEGA
@@ -139,29 +153,114 @@ iam@hitthereset.org
 #N3v3rM3ant
 dustinthemartyr@yahoo.com
 N3v3rm3ant
+
 ---
-BANDS
 
-• Persy
-• Mulligan
-• Informal
-• 3 Feet Short of a Yard
-• As Our Hearts Race To Collide
-• Alive and Well
-• The Martyr In Me
-• The Drama Life
-• Honest and Ready
-• View From Ida
-• The Failure of Time Invention
-• Concordia
-• Everynight Fire Works
-• Anotherlife
-• Strangers Again
-• Hit The Reset
-• Be The Light
-• I Am The Reaper
-• Astronaudia
-• Lightbringer
-• D3VDB3VT
-• The Casket Diaries
+## BANDS
 
+- Persy
+- Mulligan
+- Informal
+- 3 Feet Short of a Yard
+- As Our Hearts Race To Collide
+- Alive and Well
+- The Martyr In Me
+- The Drama Life
+- Honest and Ready
+- View From Ida
+- The Failure of Time Invention
+- Concordia
+- Everynight Fire Works
+- Anotherlife
+- Strangers Again
+- Hit The Reset
+- Be The Light
+- I Am The Reaper
+- Astronaudia
+- Lightbringer
+- D3VDB3VT
+- The Casket Diaries
+
+---
+
+
+![From Runtime-Error: Runtime-Error | My Internal Code Is Corrupted ](link-previews/2022-11-14-Runtime-Error-Runtime-Error.png) 
+https://begininfiniteloop.wordpress.com/
+
+![From MTHRFCKR: MTHRFCKR | MTHRFCKR - My Internal Code Is Corrupted](link-previews/2022-11-14-MTHRFCKR-MTHRFCKR.png) 
+https://ctrlaltback.space/mthrfckr/
+
+![From CakeResume: Dustin Smith | CakeResume | I've done everything from playing rock shows on the Vans Warped Tour, rebuilding molten hot glass systems for insulation, fabricating custom designs for firetrucks, to traveling the US installing Solar Racking and Panels. Recently, I've been building…](link-previews/2022-11-14-CakeResume-Dustin_Smith__CakeResume.png) 
+https://www.cakeresume.com/me/dustin-smith
+
+![From Rocketespresso.ml: Dustin Smith (@whoisdsmith) / Espresso | Hiya! Just A User Here :D.](link-previews/2022-11-14-Rocketespresso.ml-Dustin_Smith_(@whoisdsmith)__….png) 
+https://rocketespresso.ml/whoisdsmith
+
+![From Substack.com: MTHRFCKR | Everything I Find Awesome. Click to read MTHRFCKR, by Dustin Smith, a Substack publication. Launched 10 months ago.](link-previews/2022-11-14-Substack.com-MTHRFCKR.png) 
+https://whoisdsmith.substack.com/
+
+![From GitHub: whoisdsmith - Overview | Life in 1’s and 0’s. whoisdsmith has 34 repositories available. Follow their code on GitHub.](link-previews/2022-11-14-GitHub-whoisdsmith_-_Overview.png) 
+https://github.com/whoisdsmith
+
+![From Till We Are Buried: Till We Are Buried | ](link-previews/2022-11-14-Till_We_Are_Buried-Till_We_Are_Buried.png) 
+https://inthecemeteryweather.wordpress.com/
+
+
+
+https://dev.page/whoisdsmith
+https://hacknical.com/whoisdsmith/visualize
+https://iamdsmith.wordpress.com/
+https://illseeyouinanotherlife.wordpress.com
+https://inthecemeteryweather.wordpress.com/
+https://lifeisasimulation.run/
+
+https://myspace.com/blackheartbay
+https://myspace.com/wh0isdsmith
+https://myspace.com/whoisdsmith
+https://myspace.com/whoisdsmith85
+https://project-audio.ctrlaltback.space/
+https://project-audio.netlify.app/
+https://repostimeline.nazifbara.com/whoisdsmith
+https://rockanddrumroll.weebly.com/index.html
+
+https://soundcloud.com/anotherlifemi
+https://soundcloud.com/dsmithrecordings
+https://soundcloud.com/radrecords
+https://soundcloud.com/remixingloveandmusic
+https://soundcloud.com/whoisdsmith
+https://start.me/u/JDLKQ5
+
+https://vimeo.com/user164208993
+https://whoisdsmith.ctrlaltback.space
+
+
+
+
+https://www.flickr.com/people/195246813@N02/
+https://www.flickr.com/photos/132098111@N05
+https://www.flickr.com/photos/133795233@N02
+https://www.flickr.com/photos/195246813@N02/
+https://www.flickr.com/photos/195781248@N07/
+
+https://www.linkedin.com/in/whoisdsmith/
+https://www.pinterest.com/whoisdsmith/
+https://www.reddit.com/user/Iamthereaper85/
+https://www.snapchat.com/add/whoisdsmith
+https://www.youtube.com/channel/UCv5xmq0RDxEpjNKfkyxLE8Q/videos
+https://www.youtube.com/user/whoisdsmith/
+
+[Between You and I](https://iamdsmith.wordpress.com/)
+
+[Runtime-Error](https://begininfiniteloop.wordpress.com/)
+
+My Internal Code Is Corrupted
+
+[Till We Are Buried](https://inthecemeteryweather.wordpress.com/)
+
+[For You – Life is all about moments of impact and...](https://illseeyouinanotherlife.wordpress.com)
+
+[Life Is A Simulation](https://lifeisasimulation.run/)
+
+Wake up. Activate. Begin. Fail. Restart. Repeat.
+
+[Rock and Drumroll - Home](http://rockanddrumroll.weebly.com/index.html)
