--- a/HOME-MTHRFCKR/DAILY NOTES/2022-11-15.md
+++ b/HOME-MTHRFCKR/DAILY NOTES/2022-11-15.md
@@ -14,3 +14,248 @@ https://crd.so/i/whoisdsmith?dark&removeLink
 ![whoisdsmith’s GitHub image](https://crd.so/i/whoisdsmith?dark&removeLink)
 
 ---
+
+# Nardi Personality Indicator  
+
+Presented by Radiance House—Dario Nardi
+
+### Top Ranked Personality Types
+
+Type Name
+
+Type Code
+
+Score
+
+**1st Ranked Type**
+
+Harmonizer Clarifier™
+
+INFP
+
+20/25 
+
+**2nd Ranked Type**
+
+Composer Producer™
+
+ISFP
+
+18/25 
+
+**3rd Ranked Type**
+
+Foreseer Developer™
+
+INFJ
+
+17/25 
+
+### Dichotomous Preferences Scores
+
+E = 88/200
+
+I = 112/200
+
+E = 44%
+
+I = 56%
+
+S = 96/200
+
+N = 104/200
+
+S = 48%
+
+N = 52%
+
+T = 74/200
+
+F = 126/200
+
+T = 37%
+
+F = 63%
+
+J = 86/200
+
+P = 114/200
+
+J = 43%
+
+P = 57%
+
+### Cognitive Dynamics
+
+NFP—The Inspirational Mediator  
+Extraverted iNtuiting, introverted feeling
+
+SFP—The Experiential Improviser  
+Extraverted sensing, introverted feeling
+
+### Temperament
+
+Temperament
+
+Code
+
+Score
+
+1
+
+Catalyst
+
+NF
+
+68
+
+2
+
+Improviser
+
+SP
+
+56
+
+3
+
+Stabilizer
+
+SJ
+
+40
+
+4
+
+Theorist
+
+NT
+
+36
+
+### Interaction/Social Styles
+
+Style
+
+Score
+
+1
+
+Behind-the-Scenes
+
+64
+
+2
+
+Get-Things-Going
+
+52
+
+3
+
+Chart-the-Course
+
+48
+
+4
+
+In-Charge
+
+36
+
+### Favorite Personality Snapshot
+
+Type Code
+
+ISFP
+
+Type Name
+
+Composer Producer™
+
+Temperament Code
+
+NF
+
+Temperament Name
+
+Catalyst
+
+Interaction Style
+
+Behind-the-Scenes
+
+  
+
+Consistency Score
+
+5/10
+
+Hello!
+
+This report highlights key aspects of your personality based on how you responded to the questionnaire you took earlier.
+
+### Preferences
+
+Are you right or left handed? You “prefer” one hand over the other, in most situations, while still relying a lot on both hands. Similarly, you tend to uphold certain values, communicate in a particular way, find certain activities more energizing, and so forth. Notably, when under stress or by habit, people tend to respond according to preference. Other times, we feel freer to flex.
+
+The good news: the more aware you are of your preferences and options, the more deliberate and adaptable you may be. This report offers you ranked results, to reveal ways to grow.
+
+### Personality
+
+Personality means: “a pattern of preferences.” That is, people don't fit into neat boxes. Nor is a person an arbitrary collection of traits. Rather, each facet of who you are influences the other facets. Altogether, you've learned to function in a way that is sustainable.
+
+While the report touches on various aspects of personality, it focuses on the 16 Myers-Briggs personality types. Each type is presented by a 4-letter code such as ESTJ or INFP. Each of the 16 “types” points to a rich, sustainable pattern.
+
+### Your Personality Type Pattern
+
+What's your personality type? This report can't decide for you! Instead, it provides data points to help you locate your best-fit type.
+
+Ideally, you will enjoy a face-to-face self-discovery process with a professional facilitator to sort through the data points and “triangulate” a best fit. As you explore, look at top-ranked results and also consider lower-ranked results. Your career, upbringing, culture, and such have influenced you and likely explain the ranking.
+
+For example, a person who ranks ESTJ first and ISTJ second likely has a quite a different background than a person who ranks ESTJ first and ENTP second!
+
+### Rich Facets
+
+In addition to the 16 types, this report describes your likely personality preferences in several ways.
+
+-   **Temperament:** Your core needs, values, and related talents.
+-   **Interaction/Social Style:** Your energy, communication, and responsiveness while interacting with others.
+-   **Cognitive Dynamics:** Your favorite mental processes for where you focus your attention, gather information, organize, and make decisions.
+
+The questionnaire you took earlier tapped all of these models in some way. Each facet has different applications. For example, temperament is useful to find a good career fit while interaction/social styles is a window into better teamwork.
+
+You may be unfamiliar with some of these models. That's okay. Look for the references at the end of this report. Your facilitator can also likely answer your questions.
+
+### Consistency
+
+You will find a consistency score. This score varies from 0 to 10, with 10 as perfectly consistent. A low score is atypical. It means this report is not a good pointer to your personality, for whatever reason, and you should take extra time to explore. In fact, facilitation and exploration are helpful even for medium and high scores. Note: The score isn't about you! Instead, it suggests how much you can trust the results.
+
+### Validity and Reliability
+
+Research is ongoing to improve the questionnaire and report. Presently, 85% of people select the snapshot that corresponds to their best-fit 4-letter personality type code or settle with one of the three types offered to them. Please contact us for more information about this topic.
+
+### References
+
+The following books and workbooks combine deep insights with fun exercises to help you and your clients explore personality in depth with. You can learn more and order at [www.radiancehouse.com](http://www.radiancehouse.com/).
+
+#### 16 Types
+
+Linda Berens and Dario Nardi. _16 Personality Types: Descriptions For Self-Discovery._  
+Linda Berens, et. al. _Quick Guide to the 16 Personality Types in Organizations: Understanding Personality Differences in the Workplace._
+
+#### Cognitive Dynamics and 16 Types
+
+Linda Berens and Dario Nardi. _Understanding Yourself and Others: An Introduction to the Personality Type Code._  
+Dario Nardi. _8 Keys to Self-Leadership: From Awareness to Action._  
+Dario Nardi. _Neuroscience of Personality: Brain Savvy Insights for All Types of People._
+
+#### Temperament
+
+Linda Berens. _Understanding Yourself and Others: An Introduction to the 4 Temperaments - 4.0._
+
+### Interaction/Social Styles
+
+Linda Berens. _Understanding Yourself and Others: An Introduction to Interaction Styles - 2.0._
+
+Nardi Personality Indicator copyright © Dr. Dario Nardi and Radiance House. For more information, contact service@radiancehouse.com.
