--- a/HOME-MTHRFCKR/DAILY NOTES/2022-11-25.md
+++ b/HOME-MTHRFCKR/DAILY NOTES/2022-11-25.md
@@ -173,3 +173,33 @@ https://docs.ctrlaltback.space/Static_HTML_Files/Social/your_posts_1.html
 https://docs.ctrlaltback.space/Static_HTML_Files/Social/your_videos.html
 
 ----
+
+## Blog
+
+https://docs.ctrlaltback.space/Static_HTML_Files/blog/lettheoceantakeme.html
+https://docs.ctrlaltback.space/Static_HTML_Files/blog/rockanddrumroll-home.html
+https://docs.ctrlaltback.space/Static_HTML_Files/blog/whereismymind.html
+
+## Fam
+
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/barbarabaileyobituary.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/everettsbook.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/jbsobit.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/johnnieb.smithobituary.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/johnniebsmith.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/marshallputsonashowatpennfield.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/simplystevietwitter.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/stevie-home.html
+https://docs.ctrlaltback.space/Static_HTML_Files/fam/stevieferman-youtube.html
+
+## Stats
+
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/Exportify-2021.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/Exportify-2022.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/Playlastify.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/devfolio.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/dustinsmithrepositories.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/lastfm.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/release.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/spotstats.html
+https://docs.ctrlaltback.space/Static_HTML_Files/stats/spotstats2.html
