--- a/HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/DAILY NOTES/2022-11-12.md
+++ b/HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/DAILY NOTES/2022-11-12.md
@@ -134,7 +134,7 @@ Duplicate bookmarks take up space and needlessly add to a surplus of saved pages
 - [DOWNLOAD](DOWNLOAD)
 - [DOWNLOADPIRACYGUIDE](HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/Piracy/DOWNLOADPIRACYGUIDE.md)
 - [downloads](downloads)
-- [dump](dump)
+- [dump](HOME-MTHRFCKR/Software-Tools/dump.md)
 - [Edge on left](Edge on left)
 - [edu](edu)
 - [EDU](EDU)
