--- a/HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/DAILY NOTES/2022-11-12.md
+++ b/HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/DAILY NOTES/2022-11-12.md
@@ -128,7 +128,7 @@ Duplicate bookmarks take up space and needlessly add to a surplus of saved pages
 - [content-blogs-rss-and-feeds](content-blogs-rss-and-feeds)
 - [dead](dead)
 - [design](HOME-MTHRFCKR/DEV-DOCS/RSSHub/design.md)
-- [DEV](DEV)
+- [Dev](Links/Dev.md)
 - [DEVTOOLS](HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/Piracy/DEVTOOLS.md)
 - [discord](HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/piracysubreddit/r-piracy/docs/sources/discord.md)
 - [DOWNLOAD](DOWNLOAD)
