--- a/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-11.md
+++ b/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-11.md
@@ -81,3 +81,8 @@ Be sure if you already have any data in Raindrop it will be removed and replaced
     1. [Optimize](https://optimize-bookmarks-html.glitch.me/)
     2. And upload to Raindrop as ZIP archive
 - Evernote attachments are not supported yet
+
+
+---
+
+#raindrop #DailyNote 
