--- a/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-12.md
+++ b/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-12.md
@@ -210,4 +210,6 @@ Duplicate bookmarks take up space and needlessly add to a surplus of saved pages
 * [webdev](../Weboasis/webdev.md)
 * [win activation](win activation)
 
->>>>>>> Stashed changes
+---
+
+#DailyNote #raindrop 
