--- a/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-15.md
+++ b/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-15.md
@@ -257,3 +257,7 @@ Linda Berens. _Understanding Yourself and Others: An Introduction to the 4 Temp
 Linda Berens. _Understanding Yourself and Others: An Introduction to Interaction Styles - 2.0._
 
 Nardi Personality Indicator copyright © Dr. Dario Nardi and Radiance House. For more information, contact service@radiancehouse.com.
+
+
+---
+#DailyNote 
