--- a/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-16.md
+++ b/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-16.md
@@ -1,3 +1,7 @@
 [Web Developer](https://webdeveloper.com/@whoisdsmith/)
 
 [![](https://tweeco.pushkaryadav.in/api/handle/Wh0isdsmith)](https://tweeco.pushkaryadav.in)
+
+---
+
+#DailyNote 
