--- a/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-12.md
+++ b/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-12.md
@@ -203,7 +203,7 @@ Duplicate bookmarks take up space and needlessly add to a surplus of saved pages
 * [../FMHYedit/fmhy/../FMHYedit/fmhy/../../BOOKMRKS-MTHRFCKR/freemediaheckyeah/fmhyedit/fmhy/torrentpiracyguide.md.md](torrentpiracyguide.md)
 * [Unsafe Site List](Unsafe Site List)
 * [Unsafe Site List](Unsafe Site List)
-* [../../useful-stuff/useful-stuff.md/useful-stuff.md](useful-stuff)
+* [../../useful-stuff/useful-stuff.md/useful-stuff.md](USEFUL-STUFF.md)
 * [../piracysubreddit/r-piracy/docs/misc/../piracysubreddit/r-piracy/docs/misc/../../BOOKMRKS-MTHRFCKR/piracysubreddit/r-piracy/docs/misc/userscripts.md.md.md](userscripts.md)
 * [../FREEMEDIAHECKYEAH/../FREEMEDIAHECKYEAH/../../BOOKMRKS-MTHRFCKR/freemediaheckyeah/video.md.md.md](VIDEO)
 * [../FMHYedit/fmhy/../FMHYedit/fmhy/../../BOOKMRKS-MTHRFCKR/freemediaheckyeah/fmhyedit/fmhy/videopiracyguide.md.md](videopiracyguide.md)
