--- a/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-12.md
+++ b/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-12.md
@@ -167,7 +167,7 @@ Duplicate bookmarks take up space and needlessly add to a surplus of saved pages
 * [../FREESOURCES/readme/../FRE[sitehunt](HOME-MTHRFCKR/BOOKMRKS-MTHRFCKR/piracy/sitehunt.md)HRFCKR/freesources/readme/../../bookmrks-mthrfckr/freesources/readme/../../bookmrks-mthrfckr/freesources/readme/../../bookmrks-mthrfckr/freesources/readme/../../bookmrks-mthrfckr/freesources/readme/../../bookmrks-mthrfckr/freesources/readme/miscellaneous.md.md.md.md.md.md.md.md](miscellaneous)
 * [../technology/mobile.md](../technology/mobile.md)
 * [../technology/mobile.md](../technology/mobile.md)
-* [../DEV-STAX/readme/../DEV-STAX/readme/../../BOOKMRKS-MTHRFCKR/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/project-stars/Monitoring.md.md.md.md.md.md.md.md](monitoring)
+* [../DEV-STAX/readme/../DEV-STAX/readme/../../BOOKMRKS-MTHRFCKR/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/dev-stax/readme/../../bookmrks-mthrfckr/project-stars/Monitoring.md.md.md.md.md.md.md.md](home-mthrfckr/bookmrks-mthrfckr/project-stars/Website.md)
 * [More Custom Search Engines](More Custom Search Engines)
 * [../search-engines/../search-engines/../../BOOKMRKS-MTHRFCKR/search-party/../../bookmrks-mthrfckr/search-party/../../bookmrks-mthrfckr/search-party/../../bookmrks-mthrfckr/search-party/../../bookmrks-mthrfckr/search-party/../../bookmrks-mthrfckr/search-party/more-custom-search-engines.md.md](more-custom-search-engines.md)
 * [../piracysubreddit/r-piracy/docs/type/../piracysubreddit/r-piracy/docs/type/../../BOOKMRKS-MTHRFCKR/piracysubreddit/r-piracy/docs/type/../../bookmrks-mthrfckr/awesome-piracy/piracy-misc/../../bookmrks-mthrfckr/awesome-piracy/piracy-misc/../../bookmrks-mthrfckr/awesome-piracy/piracy-misc/../../bookmrks-mthrfckr/awesome-piracy/piracy-misc/../../bookmrks-mthrfckr/awesome-piracy/piracy-misc/movies-and-tv-shows.md.md.md](movies-and-tv-shows.md)
