--- a/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-15.md
+++ b/HOME-MTHRFCKR/NOTES/daily-notes/2022-11-15.md
@@ -11,15 +11,16 @@
 ```
 
 ---
+
 ![whoisdsmith’s GitHub image](https://crd.so/i/whoisdsmith?dark&removeLink)
 
 ---
 
-# Nardi Personality Indicator  
+# Nardi Personality Indicator
 
 Presented by Radiance House—Dario Nardi
 
-### Top Ranked Personality Types
+## Top Ranked Personality Types
 
 Type Name
 
@@ -51,7 +52,7 @@ INFJ
 
 17/25
 
-### Dichotomous Preferences Scores
+## Dichotomous Preferences Scores
 
 E = 88/200
 
@@ -85,7 +86,7 @@ J = 43%
 
 P = 57%
 
-### Cognitive Dynamics
+## Cognitive Dynamics
 
 NFP—The Inspirational Mediator  
 Extraverted iNtuiting, introverted feeling
@@ -93,7 +94,7 @@ Extraverted iNtuiting, introverted feeling
 SFP—The Experiential Improviser  
 Extraverted sensing, introverted feeling
 
-### Temperament
+## Temperament
 
 Temperament
 
@@ -133,7 +134,7 @@ NT
 
 36
 
-### Interaction/Social Styles
+## Interaction/Social Styles
 
 Style
 
@@ -163,7 +164,7 @@ In-Charge
 
 36
 
-### Favorite Personality Snapshot
+## Favorite Personality Snapshot
 
 Type Code
 
@@ -193,19 +194,19 @@ Hello!
 
 This report highlights key aspects of your personality based on how you responded to the questionnaire you took earlier.
 
-### Preferences
+## Preferences
 
 Are you right or left handed? You “prefer” one hand over the other, in most situations, while still relying a lot on both hands. Similarly, you tend to uphold certain values, communicate in a particular way, find certain activities more energizing, and so forth. Notably, when under stress or by habit, people tend to respond according to preference. Other times, we feel freer to flex.
 
 The good news: the more aware you are of your preferences and options, the more deliberate and adaptable you may be. This report offers you ranked results, to reveal ways to grow.
 
-### Personality
+## Personality
 
 Personality means: “a pattern of preferences.” That is, people don't fit into neat boxes. Nor is a person an arbitrary collection of traits. Rather, each facet of who you are influences the other facets. Altogether, you've learned to function in a way that is sustainable.
 
 While the report touches on various aspects of personality, it focuses on the 16 Myers-Briggs personality types. Each type is presented by a 4-letter code such as ESTJ or INFP. Each of the 16 “types” points to a rich, sustainable pattern.
 
-### Your Personality Type Pattern
+## Your Personality Type Pattern
 
 What's your personality type? This report can't decide for you! Instead, it provides data points to help you locate your best-fit type.
 
@@ -213,7 +214,7 @@ Ideally, you will enjoy a face-to-face self-discovery process with a professiona
 
 For example, a person who ranks ESTJ first and ISTJ second likely has a quite a different background than a person who ranks ESTJ first and ENTP second!
 
-### Rich Facets
+## Rich Facets
 
 In addition to the 16 types, this report describes your likely personality preferences in several ways.
 
@@ -225,39 +226,39 @@ The questionnaire you took earlier tapped all of these models in some way. Each 
 
 You may be unfamiliar with some of these models. That's okay. Look for the references at the end of this report. Your facilitator can also likely answer your questions.
 
-### Consistency
+## Consistency
 
 You will find a consistency score. This score varies from 0 to 10, with 10 as perfectly consistent. A low score is atypical. It means this report is not a good pointer to your personality, for whatever reason, and you should take extra time to explore. In fact, facilitation and exploration are helpful even for medium and high scores. Note: The score isn't about you! Instead, it suggests how much you can trust the results.
 
-### Validity and Reliability
+## Validity and Reliability
 
 Research is ongoing to improve the questionnaire and report. Presently, 85% of people select the snapshot that corresponds to their best-fit 4-letter personality type code or settle with one of the three types offered to them. Please contact us for more information about this topic.
 
-### References
+## References
 
 The following books and workbooks combine deep insights with fun exercises to help you and your clients explore personality in depth with. You can learn more and order at [www.radiancehouse.com](http://www.radiancehouse.com/).
 
-#### 16 Types
+### 16 Types
 
-Linda Berens and Dario Nardi. _16 Personality Types: Descriptions For Self-Discovery._  
-Linda Berens, et. al. _Quick Guide to the 16 Personality Types in Organizations: Understanding Personality Differences in the Workplace._
+Linda Berens and Dario Nardi. *16 Personality Types: Descriptions For Self-Discovery.*  
+Linda Berens, et. al. *Quick Guide to the 16 Personality Types in Organizations: Understanding Personality Differences in the Workplace.*
 
-#### Cognitive Dynamics and 16 Types
+### Cognitive Dynamics and 16 Types
 
-Linda Berens and Dario Nardi. _Understanding Yourself and Others: An Introduction to the Personality Type Code._  
-Dario Nardi. _8 Keys to Self-Leadership: From Awareness to Action._  
-Dario Nardi. _Neuroscience of Personality: Brain Savvy Insights for All Types of People._
+Linda Berens and Dario Nardi. *Understanding Yourself and Others: An Introduction to the Personality Type Code.*  
+Dario Nardi. *8 Keys to Self-Leadership: From Awareness to Action.*  
+Dario Nardi. *Neuroscience of Personality: Brain Savvy Insights for All Types of People.*
 
-#### Temperament
+### Temperament
 
-Linda Berens. _Understanding Yourself and Others: An Introduction to the 4 Temperaments - 4.0._
+Linda Berens. *Understanding Yourself and Others: An Introduction to the 4 Temperaments - 4.0.*
 
-### Interaction/Social Styles
+## Interaction/Social Styles
 
-Linda Berens. _Understanding Yourself and Others: An Introduction to Interaction Styles - 2.0._
+Linda Berens. *Understanding Yourself and Others: An Introduction to Interaction Styles - 2.0.*
 
 Nardi Personality Indicator copyright © Dr. Dario Nardi and Radiance House. For more information, contact service@radiancehouse.com.
 
-
 ---
+
 #DailyNote 
